[tool.poetry]
name = "wyss-ai"
version = "0.1.0"
description = ""
authors = ["NeuroAI group - Wyss Center for Neuro and BioEngineering"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.23.3"
pandas = "^1.5.0"
matplotlib = "^3.9"
pynwb = "^2.5.0"
holoviews = "^1.18.1"
scikit-learn = "^1.4.0"
plotly = "^5.18.0"
mne = "^1.6.1"
mne-features = "^0.3"
micromed-io = "^0.4.1"
neo = "^0.12.0"
pyxdf = "^1.16.5"
h5py = "^3.7.0"
joblib = "^1.2.0"
lightgbm = "^3.3.2"
lxml = "^4.9.1"
scipy = "^1.9.1"
xgboost = "^1.6.2"
imblearn = "^0.0"
statsmodels = "^0.14.0"
ndx-events = "^0.2.0"
bqplot = "0.12.26"
nilearn = "^0.10.1"
traitlets = "5.9.0"
datashader = "^0.15.2"
umap-learn = "^0.5.4"
fastparquet = "^2023.10.1"
pyarrow = "^13.0.0"
tables = "^3.9.2"
openpyxl = "^3.1.2"
mlflow = "^2.12.1"
loguru = "^0.7.2"
torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
tensorboard = "^2.16.2"
notebook = "^7.2.1"
line_profiler = "^4.1.0"
torchsummary = "^1.5.1"



